fixed separator space on mobile and desktop

--- a/style/main.scss
+++ b/style/main.scss
@@ -201,7 +201,7 @@ section {
 }
 
 .separator {
-  padding: var(--padding-height, 10em) 0;
+  padding: var(--padding-height, 6em) 0;
   background-image: url(https://picsum.photos/400);
   background-size: cover;
   background-attachment: fixed;
@@ -407,6 +407,14 @@ input {
 
   .product__label {
     display: none;
+  }
+
+  .separator {
+    --padding-height: 9em;
+
+    &.footer {
+      --padding-height: 3em;
+    }
   }
   
     .project__text {
